samples/_failures_safe/1761303654_16de52_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7281591c.c: In function ‘tokenize’:
./samples/SAFE/__tmp_7281591c.c:168:9: error: expected expression at end of input
  168 |         if (!read_token(state, &
      |         ^~
./samples/SAFE/__tmp_7281591c.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7281591c.c:168:9: error: expected declaration or statement at end of input
